--- a/744Project/packages.config
+++ b/744Project/packages.config
@@ -2,14 +2,14 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
-  <package id="Carbon.Data.Protection" version="0.16.0" targetFramework="net461" />
-  <package id="Carbon.Json" version="1.6.0" targetFramework="net461" />
-  <package id="Carbon.Packaging" version="1.24.0" targetFramework="net461" />
-  <package id="Carbon.Storage" version="1.13.0" targetFramework="net461" />
-  <package id="Carbon.VersionControl" version="1.7.0" targetFramework="net461" />
-  <package id="Carbon.Versioning" version="1.4.0" targetFramework="net461" />
+  <package id="Carbon.Data.Protection" version="0.16.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Carbon.Json" version="1.6.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Carbon.Packaging" version="1.24.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Carbon.Storage" version="1.13.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Carbon.VersionControl" version="1.7.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Carbon.Versioning" version="1.4.0" targetFramework="net461" requireReinstallation="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="GitHub" version="1.11.2" targetFramework="net461" />
+  <package id="GitHub" version="1.11.2" targetFramework="net461" requireReinstallation="true" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -43,7 +43,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net461" requireReinstallation="true" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
