--- a/744Project/Web.config
+++ b/744Project/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-744Project-20180129015214.mdf;Initial Catalog=aspnet-744Project-20180129015214;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="DatbaseModel" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-   --> <add name="DatabaseConnection" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+   --> <add name="DatabaseConnection" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+       <add name="MasterModel" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
