--- a/744Project/Web.config
+++ b/744Project/Web.config
@@ -11,7 +11,11 @@
   <connectionStrings>
     <!-- <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-744Project-20180129015214.mdf;Initial Catalog=aspnet-744Project-20180129015214;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="DatbaseModel" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-   --> <add name="DatabaseConnection" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;MultipleActiveResultSets=True;App=EntityFramework;user id=sa; password=AbeNanSaleh123" providerName="System.Data.SqlClient" />
+   --> 
+    <!--The below is the actual connection to the server's database-->
+    <add name="DatabaseConnection" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;MultipleActiveResultSets=True;App=EntityFramework;user id=sa; password=AbeNanSaleh123" providerName="System.Data.SqlClient" />
+    <!--The below is the connection to Saleh's laptop for testing purposes. Please, leave the below line to make it for me to test my code in the future :) -->
+    <!--<add name="DatabaseConnection" connectionString="data source=R14\SALEH;initial catalog=NetworkDB;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
        <!--<add name="MasterModel" connectionString="data source=MURCSP84\MSSQLSERVER01;initial catalog=NetworkDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework;user id=sa; password=AbeNanSaleh123" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
