--- a/744Project/packages.config
+++ b/744Project/packages.config
@@ -8,6 +8,7 @@
   <package id="Carbon.Storage" version="1.13.0" targetFramework="net461" requireReinstallation="true" />
   <package id="Carbon.VersionControl" version="1.7.0" targetFramework="net461" requireReinstallation="true" />
   <package id="Carbon.Versioning" version="1.4.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Cytoscape.js" version="2.7.10" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="GitHub" version="1.11.2" targetFramework="net461" requireReinstallation="true" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
