Finished Internal Network Model and updated Relay to Relay connections (models and migration)

--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -249,6 +249,10 @@
     <Compile Include="Migrations\201802110224262_Add IP address colunm.Designer.cs">
       <DependentUpon>201802110224262_Add IP address colunm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802132232494_relay to realy.cs" />
+    <Compile Include="Migrations\201802132232494_relay to realy.Designer.cs">
+      <DependentUpon>201802132232494_relay to realy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -534,6 +538,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201802110224262_Add IP address colunm.resx">
       <DependentUpon>201802110224262_Add IP address colunm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802132232494_relay to realy.resx">
+      <DependentUpon>201802132232494_relay to realy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="obj\Debug\_744Project.Migrations.addmiddlename.resources" />
     <EmbeddedResource Include="obj\Debug\_744Project.Migrations.initialcreate.resources" />
