--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -225,6 +225,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NetworkController.cs" />
+    <Compile Include="Controllers\RelayToRelayConnectionsController.cs" />
     <Compile Include="Controllers\StoresController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -509,6 +510,11 @@
     <Content Include="Views\Network\Details.cshtml" />
     <Content Include="Views\Network\Edit.cshtml" />
     <Content Include="Views\Network\Index.cshtml" />
+    <Content Include="Views\RelayToRelayConnections\Create.cshtml" />
+    <Content Include="Views\RelayToRelayConnections\Delete.cshtml" />
+    <Content Include="Views\RelayToRelayConnections\Details.cshtml" />
+    <Content Include="Views\RelayToRelayConnections\Edit.cshtml" />
+    <Content Include="Views\RelayToRelayConnections\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
