--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -455,6 +455,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="stock-internet.jpg" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
