--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\NetworkController.cs" />
     <Compile Include="Controllers\RelayToRelayConnectionsController.cs" />
     <Compile Include="Controllers\StoresController.cs" />
+    <Compile Include="Encryption.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
