--- a/744Project/744Project.csproj
+++ b/744Project/744Project.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\NetworkController.cs" />
     <Compile Include="Controllers\RelayToRelayConnectionsController.cs" />
     <Compile Include="Controllers\StoresController.cs" />
+    <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="Encryption.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -559,6 +560,12 @@
     <Content Include="Views\RelayToRelayConnections\Edit.cshtml" />
     <Content Include="Views\RelayToRelayConnections\Index.cshtml" />
     <Content Include="Views\CreditCards\Create.cshtml" />
+    <Content Include="Views\Account\SecurityQuestion.cshtml" />
+    <Content Include="Views\Transactions\Create.cshtml" />
+    <Content Include="Views\Transactions\Delete.cshtml" />
+    <Content Include="Views\Transactions\Details.cshtml" />
+    <Content Include="Views\Transactions\Edit.cshtml" />
+    <Content Include="Views\Transactions\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
